# haskellEditor

./: Configuration.yaml  HaskellEditor.cabal  Main.hs  README.md  index.html  params.json
Configuration/: Types.hs
HaskellEditor/: Files.hs  Relational.hs  ShellExecution.hs  Types.hs
Tests/: HaskellEditorTest.hs  RelationalTest.hs
ext-src/HaskQueryPackage/: HaskQuery.hs
src/: Main.hs
src/HaskellEditor/: Configuration.hs  Dynamic.hs  Editor.hs  Files.hs  Types.hs
src/HaskellEditor/Configuration/: Types.hs
src/HaskellEditor/Gui/: Components.hs  FileTree.hs  SourceTabBook.hs  Util.hs
