name:    HaskellEditor
version: 0.0
synopsis : A haskell editor
build-type : Simple
cabal-version: >= 1.2


executable haskellEditor
    main-is: Main.hs
    ghc-options: -Wall
    build-depends: base >= 4.3.0.0,
                   gtk == 0.12.4,
                   gtksourceview2,
                   aeson ,
                   yaml,
                   ghc-prim,
                   containers == 0.5.3.1,
                   directory,
                   filepath,
                   stm == 2.4.2,
                   shelly


