name:    HaskellEditor
version: 0.0
synopsis : A haskell editor
build-type : Simple
cabal-version: >= 1.2


executable haskellEditor
    main-is: Main.hs
    ghc-options: -Wall -fwarn-incomplete-patterns
    build-depends: base >= 4.3.0.0,
                   gtk <= 13.0,
                   gtksourceview2 <= 13.0,
                   aeson <= 0.7.0.0,
                   yaml <= 0.8.8,
                   containers >= 0.5.0.0,
                   directory,
                   filepath,
                   stm ,
                   shelly <= 1.5,
                   bytestring,
                   transformers,
                   pipes == 4.1.2,
                   pipes-bytestring == 2.1.0,
                   pipes-parse == 3.0.2,          
                   text == 1.1.1.3

executable haskellEditorTest
    main-is: Tests/HaskellEditorTest.hs
    ghc-options: -Wall -fwarn-incomplete-patterns
    build-depends: HUnit

